RESOLVED FIXED89104
[GTK] Assert failure in svg/batik/text/textDecoration.svg,textEffect3.svg for 64bit Debug bot
https://bugs.webkit.org/show_bug.cgi?id=89104
Summary [GTK] Assert failure in svg/batik/text/textDecoration.svg,textEffect3.svg for...
Simon Pena
Reported 2012-06-14 08:05:18 PDT
Revision r120314 <http://trac.webkit.org/changeset/r120314> introduced the following assertion: ASSERT(object->isSVGText() || object->isSVGTextPath()) in the RenderSVGResourceContainer::shouldTransformOnTextPainting of Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp That assertion currently fails on 64bits GTK Debug bot, when for tests svg/batik/text/textDecoration.svg and svg/batik/text/textEffect3.svg (See http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug/builds/34070/steps/layout-test/logs/stdio). The EFL 64bits Debug bot passes those tests, as seen in http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Debug/builds/1318/steps/layout-test/logs/stdio.
Attachments
Fixing assertion. (4.24 KB, patch)
2012-06-15 04:38 PDT, Dominik Röttsches (drott)
no flags
Simon Pena
Comment 1 2012-06-14 08:06:29 PDT
CCing Dominik Röttsches
Dominik Röttsches (drott)
Comment 2 2012-06-15 04:38:40 PDT
Created attachment 147793 [details] Fixing assertion.
Nikolas Zimmermann
Comment 3 2012-06-19 05:06:30 PDT
Comment on attachment 147793 [details] Fixing assertion. r=me!
WebKit Review Bot
Comment 4 2012-06-19 05:59:56 PDT
Comment on attachment 147793 [details] Fixing assertion. Clearing flags on attachment: 147793 Committed r120706: <http://trac.webkit.org/changeset/120706>
WebKit Review Bot
Comment 5 2012-06-19 06:00:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.