[GTK] Assert failure in svg/batik/text/textDecoration.svg,textEffect3.svg for 64bit Debug bot https://bugs.webkit.org/show_bug.cgi?id=89104

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-06-19
Reviewed by Nikolas Zimmermann.

Source/WebCore:

Adding SVGInline to assertion to fix assertion failure. Same assertion was hit on Chromium.

Covered by existing tests
svg/batik/text/textDecoration.svg
svg/batik/text/textEffect3.svg
where the assertion failure was hit.

* rendering/svg/RenderSVGResourceContainer.cpp:
(WebCore::RenderSVGResourceContainer::shouldTransformOnTextPainting):

LayoutTests:

Removing CRASH expectations after assertion failure is now fixed.

* platform/chromium/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/107316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120706 268f45cc-cd09-0410-ab3c-d52691b4dbfc