Source/WebCore/rendering/svg/RenderSVGResourceContainer.cpp
@@ -178,7 +178,8 @@ bool RenderSVGResourceContainer::shouldTransformOnTextPainting(RenderObject* obj
     UNUSED_PARAM(resourceTransform);
     return false;
 #else
-    ASSERT(object->isSVGText() || object->isSVGTextPath());
+    // This method should only be called for RenderObjects that deal with text rendering. Cmp. RenderObject.h's is*() methods.
+    ASSERT(object->isSVGText() || object->isSVGTextPath() || object->isSVGInline());
 
     // In text drawing, the scaling part of the graphics context CTM is removed, compare SVGInlineTextBox::paintTextWithShadows.
     // So, we use that scaling factor here, too, and then push it down to pattern or gradient space
